[package]
name = "enigma-runtime-t"
version = "0.3.0"
authors = ["Elichai Turkel <elichai@enigma.co>"]

[dependencies]
enigma-types = { path = "../enigma-types", default-features = false, features = ["sgx"] }
enigma-crypto = { path = "../enigma-crypto", default-features = false, features = ["sgx", "asymmetric"] }
enigma-tools-t = { path = "../enigma-tools-t" }

rmp-serde = { git = "https://github.com/scrtlabs/msgpack-rust.git" }
json-patch = { git = "https://github.com/scrtlabs/json-patch.git" }
serde_json = { git = "https://github.com/scrtlabs/serde-json-sgx.git"}
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", default-features = false, features=["serde_derive"] }
wasmi = { git = "https://github.com/scrtlabs/wasmi"}
pwasm-utils = { git = "https://github.com/scrtlabs/wasm-utils.git", default-features = false }
parity-wasm = { git = "https://github.com/scrtlabs/parity-wasm.git", branch = "enigma", default-features = false }

sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }
sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }
sgx_trts = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }
