[package]
name = "enigma-runtime-t"
version = "0.3.0"
authors = ["Elichai Turkel <elichai@enigma.co>"]

[dependencies]
enigma-types = { path = "../enigma-types", default-features = false, features = ["sgx"] }
enigma-crypto = { path = "../enigma-crypto", default-features = false, features = ["sgx", "asymmetric"] }
enigma-tools-t = { path = "../enigma-tools-t" }

# rmp-serde = { git = "https://github.com/enigmampc/msgpack-rust.git", branch =  "0.14.0-sgx-1.0.9" }
json-patch = { git = "https://github.com/njeans/json-patch.git" }
# serde_json = { git = "https://github.com/enigmampc/serde-json-sgx.git", branch = "1.0.39-sgx-1.0.9" }
# serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", branch = "sgx_1.0.9", default-features = false, features=["serde_derive"] }
wasmi = { git = "https://github.com/enigmampc/wasmi", branch = "0.4.2-sgx-1.0.9" }
pwasm-utils = { git = "https://github.com/enigmampc/wasm-utils.git", branch = "0.5.0-sgx-1.0.9", default-features = false }
parity-wasm = { git = "https://github.com/enigmampc/parity-wasm.git", branch = "enigma", default-features = false }

rmp_serde = { package = "rmp-serde", git = "https://github.com/njeans/msgpack-rust.git", default-features = false }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", features=["serde_derive"] }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }

sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
