# I use package renaming to import 2 libraries with the same name but from different sources (1 for SGX and 1 for regular std)
# Then in the code you can rename them back (under a cfg condition) to the same name to use abstractly.

[package]
name = "enigma-types"
version = "0.3.0"
authors = ["Elichai Turkel <elichai@enigma.co>"]
edition = "2018"
categories = ["no-std"]

[dependencies]
rustc-hex = { version = "2.1.0", default-features = false }
arrayvec = { version = "0.4.10", default-features = false }
serde_sgx = { package = "serde", git = "https://github.com/mesalock-linux/serde-sgx.git", optional = true }
serde_std = { package = "serde", default-features = false, optional = true }

[build-dependencies]
cbindgen = "0.8"

[features]
default = ["serde_std/derive"] # This library is no_std with the default features.
std = ["serde_std/std", "serde_std/derive"]
alloc = ["serde_std/alloc", "serde_std/derive"]
sgx = ["serde_sgx", "serde_sgx/derive"]

# [patch.'https://github.com/apache/teaclave-sgx-sdk.git']
# sgx_alloc = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_alloc" }
# sgx_build_helper = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_build_helper" }
# sgx_cov = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_cov" }
# sgx_crypto_helper = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_crypto_helper" }
# sgx_libc = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_libc" }
# sgx_rand = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_rand" }
# sgx_rand_derive = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_rand_derive" }
# sgx_serialize = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_serialize" }
# sgx_serialize_derive = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_serialize_derive" }
# sgx_serialize_derive_internals = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_serialize_derive_internals" }
# sgx_tcrypto = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_tcrypto" }
# sgx_tcrypto_helper = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_tcrypto_helper" }
# sgx_tdh = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_tdh" }
# sgx_tkey_exchange = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_tkey_exchange" }
# sgx_tprotected_fs = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_tprotected_fs" }
# sgx_trts = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_trts" }
# sgx_tse = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_tse" }
# sgx_tseal = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_tseal" }
# sgx_tstd = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_tstd" }
# sgx_tunittest = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_tunittest" }
# sgx_types = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_types" }
# sgx_ucrypto = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_ucrypto" }
# sgx_unwind = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_unwind" }
# sgx_urts = { path = "../../incubator-teaclave-sgx-sdk-master/sgx_urts" }
